--- a/positioning/styles.css
+++ b/positioning/styles.css
@@ -21,3 +21,20 @@
     width: 100px;
     height: 100px;
 }
+
+.absolute-pos {
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    background-color: gray;
+    width: 100px;
+    height: 100px;
+}
+
+.sticky-pos {
+    position: sticky;
+    top: 0;
+    background-color: red;
+    width: 100px;
+    height: 100px;
+}
