--- a/layouts/flex-practise/Sep21_2021/index.html
+++ b/layouts/flex-practise/Sep21_2021/index.html
@@ -10,6 +10,8 @@
 <body>
     <div class="container">
         <div class="item"></div>
+        <!-- <div class="item"></div> -->
+        <!-- <div class="mediumItem"></div> -->
         <div class="mediumItem"></div>
         <div class="smallItem"></div>
         <!-- <div class="item"></div>
