Use css flex to inline elements

--- a/layouts/elements/index.html
+++ b/layouts/elements/index.html
@@ -8,10 +8,36 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <!-- Floating elements -->
+    <!-- <div class="block float"></div>
+    <div class="block"></div>
+    <div class="block"></div>
+
     <div class="block"></div>
     <div class="inline">aaaa</div>
     <div class="inline">aaaa</div>
+    <div class="inline" style="padding: 30px;">aaaa</div>
     <div class="inline-block"></div>
-    <div class="inline-block"></div>
+    <div class="inline-block"></div> -->
+
+
+    <div class="flex-container">
+        <div class="flex-item"></div>
+        <!-- <div class="flex-item small"></div> -->
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+        <div class="flex-item"></div>
+    </div>
 </body>
 </html>
