--- a/layouts/elements/styles.css
+++ b/layouts/elements/styles.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+body {
+    clear: both;
+}
+
 .block {
     width: 100px;
     height: 100px;
@@ -15,6 +19,8 @@
     height: 100px;
     background: goldenrod;
     display: inline;
+    /* margin: 10px; */
+    padding: 10px;
 }
 
 .inline-block {
@@ -22,4 +28,35 @@
     height: 100px;
     background: grey;
     display: inline-block;
+    margin: 10px;
+}
+
+.float {
+    float: left;
+    width: 20px;
+    background-color: orange;
+}
+
+.flex-container {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    /* align-content: flex-start;
+    height: 500px; */
+    gap: 10px;
+    padding: 10px;
+    background-color: maroon;
+}
+
+.flex-item {
+    width: 100px;
+    height: 100px;
+    /* margin: 10px; */
+    background-color: lightgray;
+}
+
+.small {
+    width: 50px;
+    height: 50px;
 }
