--- a/layouts/grid-practise/Feb08_2022/styles.css
+++ b/layouts/grid-practise/Feb08_2022/styles.css
@@ -13,7 +13,7 @@ html, body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    gap: 10px;
+    column-gap: 10px;
     height: 100%;
 }
 
