Add next topics to be covered

--- a/layouts/elements/Jun19_2022/index.html
+++ b/layouts/elements/Jun19_2022/index.html
@@ -27,4 +27,5 @@ Block & Inline elements
 
 Next: 
 Understand these elements no content, why browser renders this way.
+Width of block, inline, inline-block - Check this
  -->
