--- a/challenges/loading_cube/styles.css
+++ b/challenges/loading_cube/styles.css
@@ -8,13 +8,21 @@
    --size: 200px;
 }
 
+.scene {
+    margin: 100px;
+    width: var(--size);
+    height: var(--size);
+
+    perspective: 600px;
+}
+
 .cube {
     position: relative;
     width: var(--size);
     height: var(--size);
 
-    perspective: 600px;
     transform-style: preserve-3d;
+    transform: rotateY(45deg);
 }
 
 .cube-face {
@@ -27,9 +35,30 @@
 
 .cube-front {
     background-color: blue;
-    transform: translate3d(0, 0, var(--size)/2);
+    transform: translate3d(0, 0, 100px);
 }
 
 .cube-back {
-    transform: rotateY(180deg) translate3d(0, 0, var(--size)/2);
+    background-color: green;
+    transform: rotateY(180deg) translate3d(0, 0, 100px);
+}
+
+.cube-left {
+    background-color: lightblue;
+    transform: rotateY(-90deg) translate3d(0, 0, 100px);
+}
+
+.cube-right {
+    background-color: grey;
+    transform: rotateY(90deg) translate3d(0, 0, 100px);
+}
+
+.cube-top {
+    background-color: goldenrod;
+    transform: rotateX(-90deg) translate3d(0, 0, 100px);
+}
+
+.cube-bottom {
+    background-color: maroon;
+    transform: rotateX(90deg) translate3d(0, 0, 100px);
 }
