--- a/challenges/candle_with_flame/styles.css
+++ b/challenges/candle_with_flame/styles.css
@@ -45,28 +45,44 @@ body {
 
 .flame {
     width: 20px;
-    height: 40px;
-    border-top-left-radius: 50%;
-    border-top-right-radius: 50%;
-    border-bottom-left-radius: 50%;
-    border-bottom-right-radius: 50%;
+    height: 30px;
     background-color: rgb(243, 184, 9);
-    animation: animate 2s infinite alternate;
-}
 
-@keyframes animate {
-    0% {
-        border-top-left-radius: 50%;
-        border-top-right-radius: 50%;
-    }
-    100% {
-        border-top-left-radius: 80%;
-        border-top-right-radius: 80%;
-    }
+    animation: wind 15s ease-in-out infinite, 
+			size 20s ease-in-out infinite, 
+			flickr 5s ease-in-out infinite;
+	transform-origin: 50% 100%;
 }
 
 .plane {
     width: 200px;
     height: 10px;
     background-color: black;
+}
+
+@keyframes wind {
+	0%, 22%, 49%, 62%, 81%, 100% {
+		border-radius: 2px 14px 8px 8px / 20px 20px 8px 8px;
+	}
+	14%, 32%, 56%, 70%, 89% {
+		border-radius: 14px 2px 8px 8px / 20px 20px 8px 8px;
+	}
+}
+
+@keyframes size {
+	0%, 22%, 49%, 62%, 81%, 100% {
+		transform: scale(1,1);
+	}
+	14%, 32%, 56%, 70%, 89% {
+		transform: scale(0.9, 1.2);
+	}
+}
+
+@keyframes flickr {
+	0%, 22%, 49%, 62%, 81%, 100% {
+		box-shadow: 0 0 25px 0 rgba(255,202,0,0.7);
+	}
+	14%, 32%, 56%, 70%, 89% {
+		box-shadow: 0 0 25px 0 rgba(255,202,0,.8);
+	}
 }
