--- a/challenges/pyramid_with_sun/styles.css
+++ b/challenges/pyramid_with_sun/styles.css
@@ -16,10 +16,11 @@ html, body {
 .container {
     width: 250px;
     height: 250px;
-    background-color: rgb(22, 250, 235);
+    background-color: rgb(61, 232, 251);
     border-radius: 50%;
     position: relative;
     z-index: 1;
+    overflow: hidden;
     /* position: absolute;
     top: 50%;
     left: 50%;
@@ -27,10 +28,24 @@ html, body {
 }
 
 .ground {
-    width: 100%;
-    height: 100px;
-    background-color: rgb(246, 218, 11);
+    width: 250px;
+    height: 70px;
+    background-color: rgb(251, 218, 5);
     position: absolute;
     bottom: 0;
-    z-index: -1;
+}
+
+.pyramid {
+    position: absolute;
+    bottom: 25%;
+    left: 50%;
+    transform: translateX(-50%);
+    border: 80px solid rgb(249, 218, 151);
+    border-left-color: transparent;
+    border-right-color: transparent;
+    border-top-color: transparent;
+}
+
+.pyramid::after {
+    
 }
