--- a/challenges/pyramid_with_sun/styles.css
+++ b/challenges/pyramid_with_sun/styles.css
@@ -39,13 +39,43 @@ html, body {
     position: absolute;
     bottom: 25%;
     left: 50%;
-    transform: translateX(-50%);
-    border: 80px solid rgb(249, 218, 151);
+    transform: translateX(-55%);
+    border: 80px solid rgb(251, 245, 229);
     border-left-color: transparent;
     border-right-color: transparent;
     border-top-color: transparent;
 }
 
 .pyramid::after {
-    
+    content: '';
+    position: absolute;
+    border: 40px solid rgb(247, 224, 164);
+    border-right-color: transparent;
+    border-top-color: transparent;
+    transform: skew(15deg) translateX(10px);
+}
+
+.sun {
+    position: absolute;
+    top: 50px;
+    left: 100px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: rgb(253, 196, 7);
+    transform-origin: 100% 500%;
+    animation: sun-rise-set 4s linear infinite;
+    /* Try cubic-bezier(.4,0,.49,1) here */
+}
+
+@keyframes sun-rise-set {
+    0% {
+        transform: rotate(0);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
