--- a/animations/buttons/hamburger_menu/styles.css
+++ b/animations/buttons/hamburger_menu/styles.css
@@ -2,10 +2,38 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+html {
+    width: 100%;
+    height: 100%;
 }
 
 body {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
     padding: 20px;
+}
+
+.container {
+    display: flex;
+    gap: 20px;
+}
+
+.box {
+    background-color: rgb(236, 236, 236);
+    width: 150px;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .burger-menu {
@@ -13,51 +41,26 @@ body {
     border: none;
     display: flex;
     flex-direction: column;
-    gap: 4px;
+    gap: 5px;
     cursor: pointer;
 }
 
-.bar {
-    width: 30px;
+.burger-menu .bar {
+    width: 35px;
     height: 4px;
     background-color: black;
     opacity: 1;
-    transition: transform 1s, opacity 0.5s;
-    transform-origin: left;
-    border-radius: 2px;
+    transition: transform 0.3s, opacity 0.1s;
 }
 
 .open .bar:nth-child(1) {
-    transform: rotate(45deg);
-    /* animation: first-bar 1s forwards; */
+    transform: translateY(9px) rotate(45deg);
 }
 
 .open .bar:nth-child(2) {
     opacity: 0;
-    /* animation: second-bar 1s forwards; */
 }
 
 .open .bar:nth-child(3) {
-    transform: translateY(5.5px) rotate(-45deg);
-    /* animation: third-bar 1s both running; */
+    transform: translateY(-9px) rotate(-45deg);
 }
-
-/* @keyframes first-bar {
-    0% {
-        transform: rotate(0);
-    }
-
-    100% {
-        transform: rotate(45deg);
-    }
-}
-
-@keyframes third-bar {
-    0% {
-        transform: rotate(0);
-    }
-
-    100% {
-        transform: rotate(-45deg);
-    }
-} */
