--- a/animations/misc/plant_with_leaves/styles.css
+++ b/animations/misc/plant_with_leaves/styles.css
@@ -32,13 +32,32 @@ body {
     bottom: 25%;
     left: calc(50% - 10px);
     background-color: rgb(4, 197, 4);
-    width: 8px;
+    width: 3px;
     height: 80px;
-    border-radius: 25px;
+    border-radius: 50%;
 }
 
 .plant::before {
-    
+    position: absolute;
+    left: 50%;
+    content: '';
+    width: 50px;
+    height: 20px;
+    background-color: rgb(6, 171, 6);
+    animation: leaf-motion 5s linear infinite;
+    transform-origin: left;
+    /* border-radius: 50%; */
+}
+
+@keyframes leaf-motion {
+    0%, 25%, 50%, 75%, 100% {
+        border-radius: 50% 40% 40% 50%;
+        transform: rotate(0deg) scale(1);
+    }
+    12%, 38%, 60%, 80%, 92% {
+        border-radius: 50% 100% 50%;
+        transform: rotate(-10deg) scale(0.95);
+    }
 }
 
 .ground {
