--- a/animations/misc/plant_with_leaves/styles.css
+++ b/animations/misc/plant_with_leaves/styles.css
@@ -32,8 +32,8 @@ body {
     bottom: 25%;
     left: calc(50% - 10px);
     background-color: rgb(4, 197, 4);
-    width: 3px;
-    height: 80px;
+    width: 5px;
+    height: 100px;
     border-radius: 50%;
 }
 
@@ -41,22 +41,21 @@ body {
     position: absolute;
     left: 50%;
     content: '';
-    width: 50px;
-    height: 20px;
+    width: 80px;
+    height: 40px;
     background-color: rgb(6, 171, 6);
     animation: leaf-motion 5s linear infinite;
     transform-origin: left;
-    /* border-radius: 50%; */
 }
 
 @keyframes leaf-motion {
     0%, 25%, 50%, 75%, 100% {
-        border-radius: 50% 40% 40% 50%;
-        transform: rotate(0deg) scale(1);
+        transform: rotate(0deg) scale(1) skewY(-5deg);
+        border-radius: 70px 100px 100px 70px/ 40px 40px 40px 40px;
     }
-    12%, 38%, 60%, 80%, 92% {
-        border-radius: 50% 100% 50%;
-        transform: rotate(-10deg) scale(0.95);
+    38%, 60% {
+        transform: rotate(-5deg) scale(0.95) skewY(10deg);
+        border-radius: 70px 100px 100px 70px/ 40px 40px 50px 40px;
     }
 }
 
