--- a/challenges/animated_typo/styles.css
+++ b/challenges/animated_typo/styles.css
@@ -5,64 +5,94 @@
 }
 
 html, body {
-    /* width: 100%;
-    height: 100%; */
+    width: 100%;
+    height: 100%;
 }
 
 body {
-    padding: 40px;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(250, 169, 70);
 }
 
-.container {
+.frame {
     position: relative;
     width: 500px;
     height: 500px;
-    border: 1px solid gray;
+    background-color: rgb(250, 169, 70);
+    overflow: auto;
 }
 
 .circle {
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
     background-color: white;
     border-radius: 50%;
-    animation: circle-animation 1s linear forwards;
+    animation: circle-animation 1s ease-in-out forwards;
 
-    /* TODO: Create container for Circle & line */
     position: absolute;
-    top: 40%;
-    left: 40%;
-    /* transform: ; */
+    top: 220px;
+    left: 220px;
     transform-origin: center;
 }
 
 @keyframes circle-animation {
     0% {
         transform: scale(1);
+    } 
+    30% {
+        transform: scale(1.3);
     }
     100% {
         transform: scale(0);
     }
 }
 
-.horizontal-line {
-    content: '';
-    display: block;
+.hl-line-left {
+    position: absolute;
+    top: 50%;
+    left: 50%;
     width: 10px;
-    height: 2px;
+    height: 3px;
     background-color: white;
-    animation: line-animation 1s 2s linear forwards;
+    animation: line-animation-left 2s 1s linear forwards;
+    transform-origin: right;
 }
 
-@keyframes line-animation {
+@keyframes line-animation-left {
     0% {
-        transform: scaleX(1);
+        transform: scaleX(0) translateX(0);
+    }
+    50% {
+        transform: scaleX(5);
     }
     100% {
+        transform: scaleX(10) translateX(-100px);
+    }
+}
+
+.hl-line-right {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 10px;
+    height: 3px;
+    background-color: white;
+    animation: line-animation-right 2s 1s linear forwards;
+    transform-origin: left;
+}
+
+@keyframes line-animation-right {
+    0% {
+        transform: scaleX(0) translateX(0);
+    }
+    50% {
         transform: scaleX(5);
+    }
+    100% {
+        transform: scaleX(10) translateX(100px);
     }
 }
