--- a/challenges/animated_typo/styles.css
+++ b/challenges/animated_typo/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    --color: white;
+    --color: rgb(252, 245, 245);
     --line-thickness: 5px;
     --hr-line-width: 150px;
     --bracket-height: 100px;
@@ -22,6 +22,7 @@ body {
     align-items: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: var(--color);
+    background: rgb(252, 237, 208);
 }
 
 .frame {
@@ -31,6 +32,12 @@ body {
     background-color: rgb(250, 169, 70);
     overflow: auto;
     padding: 20px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
 }
 
 .circle {
@@ -116,7 +123,7 @@ body {
     width: var(--line-thickness);
     height: var(--bracket-height);
     background-color: var(--color);
-    position: relative;
+    position: absolute;
     top: calc(50% - var(--bracket-height)/2);
     left: calc(50% - var(--hr-line-width));
     transform: scaleY(0);
@@ -179,7 +186,6 @@ body {
 }
 
 .bracket-right::before {
-    /* Understand how this works, though parent is not relative */
     position: absolute;
     top: 0;
     right: 0;
@@ -208,29 +214,54 @@ body {
 }
 
 .main-heading {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
+    transform: scale(0);
     font-size: 40px;
     font-weight: bold;
     text-transform: uppercase;
-    animation: main-heading-scale 0.5s 1.6s ease-in-out forwards;
+    animation: heading-scale 0.5s 1.6s ease-in-out forwards;
 }
 
-@keyframes main-heading-scale {
+@keyframes heading-scale {
     0% {
-        transform: translate(-50%, -50%) scale(0);
+        transform: scale(0);
     }
     100% {
-        transform: translate(-50%, -50%) scale(1);
+        transform: scale(1);
     }
 }
 
-/* .top-heading {
-    position: absolute;
-    top: 35%;
-    left: 40%;
-    font-size: 24px;
+.top-heading {
+    font-size: 20px;
     text-transform: uppercase;
-} */
+    opacity: 0;
+    animation: slide-in-left 0.5s 2s ease-in forwards;
+}
+
+@keyframes slide-in-left {
+    0% {
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.bottom-heading {
+    font-size: 20px;
+    text-transform: uppercase;
+    opacity: 0;
+    animation: slide-in-right 0.5s 2s ease-in forwards;
+}
+
+@keyframes slide-in-right {
+    0% {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
