--- a/animations/buttons/hamburger_menu/styles.css
+++ b/animations/buttons/hamburger_menu/styles.css
@@ -49,18 +49,66 @@ body {
     width: 35px;
     height: 4px;
     background-color: black;
+}
+
+/* Hamburgee menu 1 */
+.box:nth-child(1) .burger-menu .bar {
     opacity: 1;
     transition: transform 0.3s, opacity 0.1s;
 }
 
-.open .bar:nth-child(1) {
+.box:nth-child(1) .open .bar:nth-child(1) {
     transform: translateY(9px) rotate(45deg);
 }
 
-.open .bar:nth-child(2) {
+.box:nth-child(1) .open .bar:nth-child(2) {
     opacity: 0;
 }
 
-.open .bar:nth-child(3) {
+.box:nth-child(1) .open .bar:nth-child(3) {
     transform: translateY(-9px) rotate(-45deg);
+}
+
+/* Hamburgee menu 2 */
+.box:nth-child(2) .burger-menu .bar {
+
+}
+
+.box:nth-child(2) .open .bar:nth-child(1) {
+    animation: button2-bar1 1s ease-in-out forwards;
+}
+
+.box:nth-child(2) .open .bar:nth-child(2) {
+    animation: button2-bar2 1s ease-in-out forwards;
+}
+
+.box:nth-child(2) .open .bar:nth-child(3) {
+    animation: button2-bar3 1s ease-in-out forwards;
+}
+
+@keyframes button2-bar1 {
+    0% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(9px);
+    }
+}
+
+@keyframes button2-bar2 {
+    0% {
+        transform: opacity(1);
+    }
+    50% {
+        transform: opacity(0);
+    }
+}
+
+@keyframes button2-bar3 {
+    0% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(-9px);
+    }
 }
