--- a/ui/product-card/styles.css
+++ b/ui/product-card/styles.css
@@ -29,25 +29,6 @@ body {
     height: 500px;
     border-radius: var(--card-border-radius);
     box-shadow: 0 4px 8px rgb(158, 158, 158);
-    overflow: hidden;
-}
-
-.card::after {
-    content: '';
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 2;
-    background-color: lightgray;
-
-    transform-origin: center;
-
-    width: 500px;
-    height: 2px;
-    box-shadow: 0 0 4px 8px rgba(255, 255, 255, 0.4);
-    transform: translate(-350px, -100px) rotate(-45deg);
-    animation: glitter 1s ease-in-out forwards;
 }
 
 @keyframes glitter {
@@ -71,6 +52,23 @@ body {
     transition: all 1s;
 
     overflow: hidden;
+}
+
+.card--front::after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    background-color: lightgray;
+
+    transform-origin: center;
+
+    width: 500px;
+    height: 2px;
+    box-shadow: 0 0 4px 8px rgba(255, 255, 255, 0.4);
+    transform: translate(-350px, -100px) rotate(-45deg);
 }
 
 .card--back {
@@ -168,7 +166,7 @@ body {
 
 
 /* Product card 1 styles */
-.card:nth-child(1)::after {
+.card:nth-child(1) .card--front::after {
     animation: glitter 1s ease-in-out forwards;
 }
 
@@ -181,7 +179,7 @@ body {
 }
 
 /* Product card 2 styles */
-.card:nth-child(2)::after {
+.card:nth-child(2) .card--front::after {
     animation: glitter 1s 0.6s ease-in-out forwards;
 }
 
@@ -194,7 +192,7 @@ body {
 }
 
 /* Product card 3 styles */
-.card:nth-child(3)::after {
+.card:nth-child(3) .card--front::after {
     animation: glitter 1s 1.2s ease-in-out forwards;
 }
 
