--- a/ui/lazy-load-images/styles.css
+++ b/ui/lazy-load-images/styles.css
@@ -7,8 +7,7 @@
 .wrapper {
     width: 300px;
     height: 300px;
-    background-color: lightgray;
-    /* position: relative; */
+    overflow: hidden;
 }
 
 img {
@@ -18,21 +17,35 @@ img {
 }
 
 .wrapper:nth-child(1) {
-    /* top: 0; */
     margin-top: 0;
 }
 
 .wrapper:nth-child(2) {
-    /* top: 50%; */
     margin-top: 1000px;
 }
 
 .wrapper:nth-child(3) {
-    /* top: 100%; */
     margin-top: 2000px;
 }
 
 .wrapper:nth-child(4) {
-    /* top: 150%; */
     margin-top: 4000px;
+}
+
+.wrapper::before {
+    content: '';
+    display: block;
+    width: 300%;
+    height: 100%;
+    background: linear-gradient(to right, lightgrey, grey, lightgrey);
+    animation: loading 2s ease-in-out infinite;
+}
+
+@keyframes loading {
+    0% {
+        transform: translateX(-60%);
+    }
+    100% {
+        transform: translateX(0%);
+    }
 }
